Fixed broken styles

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -8,7 +8,6 @@
 .background{
     background-size: cover;
     background-repeat: no-repeat;
-    overflow: hidden;
     display: flex;
     /*justify-content: center;*/
     align-items: center;
@@ -16,11 +15,15 @@
     gap: 10px;
 }
 
+h4{
+    margin-left: 10px;
+}
+
 @media (min-width: 1025px) {
     .main_box {
-        width: 30%;
-        height: 65%;
-        margin: 50px auto;
+        width: 40%;
+        height: 80%;
+        margin: 0 auto;
         border-radius: 30px;
     }
     .background{
@@ -34,17 +37,16 @@
 @media (min-width: 1px) and (max-width: 1024px){
     .main_box {
         width: 100vw;
-        height: 88vh;
+        height: 100%;
         margin: 0 auto;
     }
 
     .background{
         background-image: url("../assets/mobile_background.png");
-
-        height: 100%;
+        height: 87vh;
         width: 100%;
     }
-    #header_login{
+    #header_login, #header_home{
         display: none;
     }
 }
