--- a/src/styles/Home_screen_style.css
+++ b/src/styles/Home_screen_style.css
@@ -2,9 +2,9 @@
     background-color: rgba(177, 172, 253, 0.21);
     font-weight: 800;
     user-select: none;
-    padding-bottom: 20px;
-    width: 100%;
+    width: 40%;
     height: 100%;
+    /*overflow: hidden;*/
 }
 button{
     cursor: pointer;
@@ -18,8 +18,8 @@ button{
         border-radius: 25px 0 15px 0;
     }
     .attendance_table{
-        margin-right: 100px;
-        width: 50%;
+        width: 70%;
+        height: auto;
         border-radius: 20px;
     }
 
@@ -37,14 +37,16 @@ button{
         margin: 0 10px 10px 10px;
         border-radius: 0 0 20px 20px;
     }
-
+    .container{
+        width: 100vw;
+        flex-direction: row;
+    }
     .date{
         width: 14%;
     }
     .times{
         width: 75%;
     }
-
     th:first-child{
         border-radius: 20px 0 0 0;
     }
@@ -69,8 +71,14 @@ button{
         -ms-overflow-style: none;
         scrollbar-width: none;
     }
-    .main_box{
-        overflow: hidden;
+    #home_main_box{
+        height: 100%;
+        width: auto;
+    }
+    .container{
+        width: 100%;
+        height: 100%;
+        flex-direction: row;
     }
     .date{
         width: 21%;
@@ -78,8 +86,9 @@ button{
     .times{
         width: 55%;
     }
-    .container{
+    #home_main_box{
         width: 100%;
+        height: 100%;
     }
     .attendance_table{
         width: 100%;
@@ -126,7 +135,8 @@ button{
 
 .middle_buttons_div{
     display: flex;
-    gap: 140px;
+    margin-top: 30px;
+    gap: 130px;
 }
 
 .middle_buttons_inner{
@@ -200,7 +210,7 @@ textarea:focus{
 
 
 .bottom_buttons_div{
-    margin-top: 100px;
+    margin: 50px auto 20px auto;
     display: flex;
     gap: 60px;
 }
@@ -208,7 +218,7 @@ textarea:focus{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0 10px;
+    /*margin: 0 10px;*/
 }
 .bottom_buttons{
     width: 100px;
@@ -231,10 +241,10 @@ textarea:focus{
     background-image: url("../assets/view_table.png");
 }
 
-
 #container{
     position: relative;
     margin-top: 100px;
+    height: 100%;
 }
 
 .svg_circle{
@@ -286,19 +296,19 @@ textarea:focus{
 }
 #start_time{
     top: 50px;
-    right: 4vw;
+    right: 40px;
 }
 
 #end_time{
     top: 50px;
-    left: 4vw;
+    left: 40px;
 }
 
 
 .container {
     display: flex;
     flex-direction: row;
-    gap: 70px;
+    gap: 50px;
 }
 
 .attendance_table {
@@ -352,13 +362,6 @@ tr:nth-child(odd) {
     cursor: pointer;
 }
 
-
-
-
-
-
-
-
 #table_div::-webkit-scrollbar {
     display: none;
     -ms-overflow-style: none;
@@ -370,7 +373,6 @@ tr:nth-child(odd) {
     overflow: scroll;
     font-size: 18px;
 }
-
 
 th{
     background-color: rgba(120, 191, 255, 0.49);
